# acropolis-v1

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml
api/: Cargo.toml  README.md
api/src/: main.rs  routes.rs  settings.rs  state.rs  utils.rs  verifier.rs
audit-utils/: Cargo.toml
audit-utils/src/: lib.rs
client/: Cargo.toml  generate_groth16_proof.sh  generate_proof.sh  receipt
client/government/: public_key  secret_key
client/src/: lib.rs  main.rs  prover.rs
client/user/: public_identity  public_key  secret_key
ethereum/: .gitignore  hardhat.config.ts  package-lock.json  package.json
ethereum/contracts/: VoteRecorder.sol
ethereum/scripts/: deploy.ts  scrape.ts  start_testnet.sh  vote.ts
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
risc0-types/: Cargo.toml
risc0-types/src/: lib.rs
scripts/: audit.sh  upload.sh  vote.sh
tui/: Cargo.toml
tui/src/: app.rs  handler.rs  lib.rs  main.rs  task.rs  ui.rs
