[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
config = "0.14.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
