[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
config = "0.14.0"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
serde = "1.0.202"
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
hex = "0.4.3"
risc0-types = {path="../risc0-types"}
risc0-zkvm = {version="0.21", default-features=false}
methods = { path = "../methods" }
k256 = {git="https://github.com/risc0/RustCrypto-elliptic-curves", features=["serde"]}
acropolis = {path="../client"}

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-for-all"]