[package]
name = "audit-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
risc0-zkvm = {version="0.21", default-features=false}
hex = "0.4"
serde = "1"
bincode = "1.3.3"
methods = {path="../methods"}
risc0-types = {path="../risc0-types"}
k256 = {git="https://github.com/risc0/RustCrypto-elliptic-curves", features=["serde"]}