[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.21" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
k256 = {git="https://github.com/risc0/RustCrypto-elliptic-curves"}
rand_core = "0.6.4"
risc0-types = {path="../risc0-types"}