[package]
name = "acropolis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
methods = { path = "../methods" }
elliptic-curve = "0.13"
risc0-zkvm = { version = "0.21" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
k256 = {git="https://github.com/risc0/RustCrypto-elliptic-curves", features=["serde"]}
rand_core = "0.6.4"
risc0-types = {path="../risc0-types"}
reqwest = {version="0.12", features=["blocking", "json"]}