[package]
name = "acropolis"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.21", default-features = false, features = ['std'] }
k256 = {git="https://github.com/risc0/RustCrypto-elliptic-curves", features=["serde"]}
risc0-types = {path="../../risc0-types"}

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", features=["serde"]  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint" }